# sample-sanic-project

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: configuration.py  main.py  tests.py
src/alembic/: env.py
src/apps/auth/: auth.py  models.py  schemas.py  selectors.py  services.py
src/apps/balances/: balances.py  models.py  routes.py  schemas.py  selectors.py  services.py
src/apps/payments/: payments.py  routes.py  schemas.py  services.py
src/apps/products/: models.py  products.py  routes.py  schemas.py  selectors.py  services.py
src/apps/transactions/: models.py  routes.py  schemas.py  selectors.py  transactions.py
src/apps/users/: models.py  routes.py  schemas.py  selectors.py  services.py  users.py
src/db/: __init__.py  base.py  base_class.py  bind.py
src/utils/: mixins.py  to_openapi.py  uuid_encder.py  webhook_signature.py
